--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,15 @@ spring.application.name=learning_rest_new
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/learning_rest_new
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=your_username
+spring.datasource.password=your_password
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=5
 
 spring.jpa.show-sql=true
+
+app.jwt.secretKey=54a6a79c-6f76-4f65-9c09-165500f9ba26
+app.jwt.jwtExpirationMs=864000000
+app.jwt.refreshTokenExpirationMs=864000000
